# quickquick

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: code-style.yml
quickquick/: crud.py  db.py  models.py  schemas.py  server.py
quickquick/static/: index.html  script.js
